--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,70 +3,33 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Heartsease - Backend Management</title>
+  <link rel="stylesheet" type="text/css" href="css/iconfont.css">
+  <link rel="stylesheet" type="text/css" href="css/frame_all.css">
+  <link rel="stylesheet" type="text/css" href="css/frame_top.css">
+  <link rel="stylesheet" type="text/css" href="css/frame_left.css">
+  <link rel="stylesheet" type="text/css" href="css/frame_right.css">
   <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
   <script type="text/javascript">
     function displayCurrentTime() {
       $('#current_time_span').text('');
       current_time = new Date();
       year = current_time.getFullYear();
-      month = current_time.getMonth() + 1;
+      month = current_time.getMonth();
       date = current_time.getDate();
-      $('#current_time_span').text(current_time.toLocaleString());
+      day = current_time.getDay();
+      hour = current_time.getHours();
+      minute = current_time.getMinutes();
+      second = current_time.getSeconds() + 1;
+      monthArr = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
+      dayArr = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'];
+      $('#current_time_span').text(date + " " + monthArr[month] + ", " + year + "  " + dayArr[day] + "  " + hour + ":" + minute + ":" + second);
     }
     setInterval('displayCurrentTime()', 1000);
   </script>
   <style type="text/css">
-    html {
-    }
-    body {
-      width: 100%;
-      height: 100%;
-      padding: 0;
-      margin: 0;
-      text-decoration-line: none;
-      background: #134E5E;  /* fallback for old browsers */
-      background: -webkit-linear-gradient(to left, #71B280, #134E5E);  /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to left, #71B280, #134E5E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      font-family: Consolas;
-      color: white;
-    }
-    a {
-      text-decoration-line: none;
-      color: inherit;
-    }
-    a:hover {
-      color: yellow;
-      cursor: pointer;
-    }
-    #container {
-      min-width: 90%;
-      max-width: 90%;
-      height: 960px;
-      margin: auto;
-    }
-    .frame {
-      float: left;
-      background: #003333;
-    }
-    #frame_top {
-      height: 75px;
-      width: 96%;
-      margin: 1% 2% 0.5% 2%;
-    }
-    #current_time_span {
-      display: block;
-    }
-    #frame_left {
-      width: 15%;
-      height: 80%;
-      margin-left: 2%;
-    }
-    #menu_div {
-      text-align: center;
-    }
     #frame_right {
       float: right;
-      width: 80%;
+      width: 75%;
       height: 80%;
       margin-right: 2%;
     }
@@ -80,21 +43,57 @@
 <body>
   <div id="container">
     <div class="frame" id="frame_top">
-      <span>Backend Management</span>
-      <span id="current_time_span"></span>
-      <span id="user_span">test</span>
-      <a href="#">Logout</a>
+      <div id="top_left">
+        <span>Backend Management</span>
+      </div>
+      <div id="top_right">
+        <div id="person_div">
+          Welcome! <span class="iconfont ali-icon-service"></span>  <span id="user_span">test</span>
+          <a>Logout</a>
+        </div>
+        <span id="current_time_span"></span>
+      </div>
     </div>
     <div class="frame" id="frame_left">
       <div id="menu_div">
-        <div id="account_management_div">
-          <a>个人信息</a>
+        <div class="menu_div">
+          <div class="iconfont ali-icon-category"></div>
+          <span>MANAGEMENT</span>
         </div>
-        <div id="user_management_div">
-          <a>用户管理</a>
+        <div class="menu_div" id="account_management_div">
+          <div class="iconfont ali-icon-bussinesscard"></div>
+          <a>
+            Personal Details
+            <span class="iconfont ali-icon-moreunfold"></span>
+          </a>
         </div>
-        <div id="article_management_div">
-          <a>文章管理</a>
+        <div class="menu_div" id="admin_management_div">
+          <div class="iconfont ali-icon-service"></div>
+          <a>
+            Admin Management
+            <span class="iconfont ali-icon-moreunfold"></span>
+          </a>
+        </div>
+        <div class="menu_div" id="user_management_div">
+          <div class="iconfont ali-icon-account"></div>
+          <a>
+            User Management
+            <span class="iconfont ali-icon-moreunfold"></span>
+          </a>
+        </div>
+        <div class="menu_div" id="article_management_div">
+          <div class="iconfont ali-icon-form"></div>
+          <a>
+            Article Management
+            <span class="iconfont ali-icon-moreunfold"></span>
+          </a>
+        </div>
+        <div class="menu_div" id="comment_management_div">
+          <div class="iconfont ali-icon-text"></div>
+          <a>
+            Comment Management
+            <span class="iconfont ali-icon-moreunfold"></span>
+          </a>
         </div>
       </div>
       <div id="app-2">
@@ -118,6 +117,8 @@
     data: {
       message: '页面加载于 ' + new Date().toLocaleString()
     }
+  })
+  var vm = new Vue({
   })
 </script>
 </html>
