--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -24,7 +24,7 @@
   </script>
   <style type="text/css">
     html {
-      background: url('../pics/pika-396886-unsplash.jpg');
+      background: url('pics/pika-396886-unsplash.jpg');
       background-size: cover;
     }
     body {
